--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <script>
-      setTimeout(function() {window.addEventListener('DOMContentLoaded', function () {setTimeout(function () {document.querySelector('._logo-img').className = '_logo-img';setTimeout(function () {document.querySelector('._loader').className = '_loader _hide';}, 800);}, 2000);});}, 0);
+      let rippleTimeout;
+      setTimeout(function() {window.addEventListener('DOMContentLoaded', function () {setTimeout(function () {clearTimeout(rippleTimeout);document.querySelector('._logo-img').className = '_logo-img';setTimeout(function () {document.querySelector('._loader').className = '_loader _hide';}, 700);}, 1700);});}, 0);
     </script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -28,7 +29,7 @@
     -->
     <title>Vee-Tek Group</title>
     <style>
-      html{overflow:hidden !important}._loader{height:100vh;width:100vw;position:fixed;top:0;z-index:10000;left:0;min-height:100%;display:flex;background:rgb(calc(157 - 48), calc(113 - 48), calc(65 - 48));color:white;justify-content:center;align-items:center;transition:0.35s cubic-bezier(0.785, 0.135, 0.15, 0.86)}._loader._hide{visibility:hidden;transform:translateX(110%)}._logo{display:block;font-size:1.25rem;border-radius:2rem}._logo-img{width:6rem;border-radius:50%;display:inline-block;transform:scale(1) translateY(-64px)}._logo-img._animate{animation:animate 1.1s forwards cubic-bezier(0.68, -0.55, 0.265, 1.55)}@keyframes animate{0%{transform:scale(0.1) translateY(calc(-500vh - 128px))}50%{transform:scale(0.1) translateY(50vh)}100%{transform:scale(1) translateY(-64px)}}._ripple{animation:ripple 2.25s infinite forwards ease-out;transform:scale(1) translateY(-64px)}@keyframes ripple{from{box-shadow:0 0 0 0em #c8a565,0 0 0 0.75em rgba(200,165,101,0.5)}to{box-shadow:0 0 0em 3em rgba(0,0,0,0),0 0 0 3em rgba(0,0,0,0)}}
+      html{overflow:hidden !important}._loader{height:100vh;width:100vw;position:fixed;top:0;z-index:10000;left:0;min-height:100%;display:flex;background:rgb(calc(157 - 48), calc(113 - 48), calc(65 - 48));color:white;justify-content:center;align-items:center;transition:0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335)}._loader._hide{visibility:hidden;transform:translateX(110%)}._logo{display:block;font-size:1.25rem;border-radius:2rem}._logo-img{width:6rem;border-radius:50%;display:inline-block;transform:scale(1) translateY(-64px)}._logo-img._animate{animation:animate 1.1s forwards cubic-bezier(0.68, -0.55, 0.265, 1.55)}@keyframes animate{0%{transform:scale(0.1) translateY(calc(-500vh - 128px))}50%{transform:scale(0.1) translateY(50vh)}100%{transform:scale(1) translateY(-64px)}}._ripple{animation:ripple 2.25s infinite forwards ease-out;transform:scale(1) translateY(-64px)}@keyframes ripple{from{box-shadow:0 0 0 0em #c8a565,0 0 0 0.75em rgba(200,165,101,0.5)}to{box-shadow:0 0 0em 3em rgba(0,0,0,0),0 0 0 3em rgba(0,0,0,0)}}
     </style>
   </head>
 
@@ -39,7 +40,7 @@
         width="3rem"
         src="/images/logo-192.png"
         alt="Vee-Tek Group logo"
-        onload="const img=this;const wrapper=img.parentNode;img.className='_logo-img _animate';let rippleTimeout=setTimeout(function(){img.className='_logo-img _ripple';},2500);"
+        onload="const img=this;const wrapper=img.parentNode;img.className='_logo-img _animate'; rippleTimeout=setTimeout(function(){img.className='_logo-img _ripple';},1250);"
       />
     </section>
 
