Add footer navigators.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <img
         class="_logo-img"
         width="3rem"
-        src="/images/logo-192.png"
+        src="/images/logos/logo-192.png"
         alt="Vee-Tek Group"
         onload="loadAnimScript.bind(this)()"
         onerror="loadAnimScript.bind(this)()"
