Add News component(s).

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
         onerror="loadAnimScript.bind(this)()"
       />
     </section>
+
+    <!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="custom-scroll-bar"></div>
   </body>
