--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
   </head>
 
   <body class="custom-scroll-bar">
+    <!-- webp support checker -->
+    <img
+      style='display: none'
+      src='/images/logos/logo-title-trans.webp'
+      onload="this.parentNode.classList.add('webp');"
+      onerror="this.parentNode.classList.add('no-webp');"
+    />
+
     <section class="_loader">
       <div>
         <div>
@@ -34,6 +42,7 @@
               <source
                 srcset='/images/logos/logo-192.webp'
                 type='image/webp'
+                onerror="alert('not loaded')"
               />
               <img
                 src="/images/logos/logo-192.png"
@@ -59,7 +68,7 @@
         </picture>
       </div>
     </section>
-    
+
     <script>
       var rippleTimeout,almostTimeout;function loadAnimScript(){var loader=document.querySelector("._loader"),logoImg=this.parentNode.parentNode,loadStatus=document.querySelector("._load-status"),logoTitle=document.querySelector("._logo-title");logoImg.classList.add("_animate"),setTimeout((function(){logoTitle.classList.add("show"),rippleTimeout=setTimeout((function(){logoImg.className="_logo-img centered _ripple",loadStatus.textContent="Loading...",loadStatus.classList.add("show"),almostTimeout=setTimeout((function(){loadStatus.textContent="Slow network. Almost done..."}),18e3)}),2e3)}),2e3),window.addEventListener("load",(function(){setTimeout((function(){clearTimeout(almostTimeout),clearTimeout(rippleTimeout),logoImg.className="_logo-img centered",loadStatus.classList.remove("show"),setTimeout((function(){loadStatus.textContent="Welcome!",loadStatus.classList.add("show"),setTimeout((function(){loader.className="_loader _hide-right",document.querySelector("html").style.overflow="auto"}),1600)}),400)}),1600)}))}document.head.insertAdjacentHTML("afterbegin",'<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700,900|Google+Sans:300,400,500,700,900&display=swap"/>');
     </script>
